fixed image stretching horizontally in big picture

--- a/public/styles/tailwind.css
+++ b/public/styles/tailwind.css
@@ -823,6 +823,11 @@ video {
   background-color: rgb(9 9 11 / 0.5);
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
